Progress on Inductive Domain Method.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -777,16 +777,14 @@ This is because, in accordance with concept/technique \#2, we ignored the matter
 
 How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it: the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination (or rather, from strong normalization) follows consistency of Coq's logic. Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
 
-Structural recursion is to be contrasted with \textit{general recursion}, found in most programming languages, in which arguments of recursive calls can be arbitrary. This is very convenient for the pragmatic programmer, because it doesn't constrain him at all, but renders the language inconsistent as a logic, and thus absolutely useless for formal reasoning.\footnote{Note, however, that an inconsistent language can still be useful for the purpose of \textit{rigorous} reasoning. See \cite{FastAndLoose} for details.} Consider Haskell's \m{Void} type, for example, which is supposed to be empty, just like its Coq equivalent \m{False}. There is no direct way of making an element of \m{Void}, but using general recursion we can easily define a nonterminationg function \m{f\ ::\ a -> Void} (for example by setting \m{f x = f x}), which we can then use to obtain an element of \m{Void} (for example, \m{f ()\ ::\ Void}).
-
-Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer might look like a revelation, but in hindsight it couldn't have been more obvious.
+Structural recursion is to be contrasted with \textit{general recursion}, found in most programming languages, in which arguments of recursive calls can be arbitrary. This is very convenient for the pragmatic programmer, because it doesn't constrain him at all, but renders the language inconsistent as a logic, and thus absolutely useless for formal reasoning.\footnote{Note, however, that an inconsistent language can still be useful for the purpose of \textit{rigorous} reasoning. See \cite{FastAndLoose} for details.} Consider Haskell's \m{Void} type, for example, which is supposed to be empty, just like its Coq equivalent \m{False}. There is no direct way of making an element of \m{Void}, but using general recursion we can easily define a nonterminating function \m{f\ ::\ a -> Void} (for example by setting \m{f x = f x}), which we can then use to obtain an element of \m{Void} (for example \m{f ()\ ::\ Void}).
 
 \begin{center}
     \textbf{Formally verified algorithm concept/technique \#3.1} \\
     Define a predicate that represents the shape of recursion in the algorithm and use it to implement a better template.
 \end{center}
 
-This technique, which I will call the \textit{Inductive Domain Method},\footnote{In the literature it is called the Bove-Capretta method, but this name, derived from the surnames of its inventors, is neither descriptive nor very catchy, so I will avoid it. The method and related ideas were developed in a string of papers between 2001 and 2009: \cite{BCM1} \cite{BCM2} \cite{BCM3} \cite{BCM4} \cite{BCM5} \cite{BCM6} \cite{BCM7} \cite{BCM8} \cite{BCM9}.} is trying to tell us is that we basically want to represent general recursion on elements of some type by structural recursion on elements of a type crafted precisely for this purpose. If we do that, we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
+Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer is provided by the above technique which I will call the \textit{Inductive Domain Method}.\footnote{In the literature it is called the Bove-Capretta method but this name, derived from the surnames of its inventors, is neither descriptive nor very catchy, so I will avoid it. The method and related ideas were developed in a string of papers between 2001 and 2009: \cite{BCM1} \cite{BCM2} \cite{BCM3} \cite{BCM4} \cite{BCM5} \cite{BCM6} \cite{BCM7} \cite{BCM8} \cite{BCM9}.} It might look like a revelation at first, but in hindsight it couldn't have been more obvious. This technique basically tells us to represent general recursion on elements of some type by structural recursion on elements of a special type crafted precisely for this purpose. By doing that we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
 
 \inputminted
 [
@@ -796,6 +794,15 @@ This technique, which I will call the \textit{Inductive Domain Method},\footnote
     lastline=51
 ]
 {Coq}{Snippets/Chapter2/ProvingTermination.v}
+
+The above listing shows how the Inductive Domain Method looks in practice. We define an inductive family of predicates \m{QSDom}, one for each parameter \m{A\ :\ QSArgs}. \m{QSDom A l} can be read aloud as ``\m{l} belongs to the domain of quicksort'' and an element of \m{QSDom A l} represents the complete call graph of our previous implementation of \m{qs} when applied to \m{l}.
+
+There are two constructors. \m{Short} takes as argument a proof of \m{short l = None}, so it represents the case in which the list \m{l} is short. It can be read as ``if \m{l} is short, then it belongs to the domain of quicksort''. \m{Long} takes, as one of its arguments, a proof of \m{short l = Some (h, t)}, so it represents the recursive case in which \m{l} is not short. Its other arguments are proofs of \m{choosePivot h t = (pivot, rest)} and \m{partition pivot rest = (lt, eq, gt)}, which represent the calls to these functions that were present in our previous implementation of \m{qs}. Lastly, it takes as arguments the proofs that \m{lt} and \m{gt} belong to the domain. Therefore, the constructor \m{Long} can be read as ``\m{l} belongs to the domain if \m{lt} and \m{gt} belong to the domain'', where \m{lt} and \m{gt} are the results of \m{partition}ing \m{l} with the chosen \m{pivot}.
+
+Given such a domain predicate, the implementation of the new version of \m{qs} is trivial. Both \m{A} and \m{l} become implicit arguments and the new principal argument is \m{d : QSDom A l}. We match on \m{d} and in the first case we sort the list \m{l} ad hoc, whereas in the second case we recursively sort the elements lesser and greater than the pivot and put them together with the pivot and the elements equal to the pivot. Note that we don't have to call \m{choosePivot} or \m{partition} -- we can retrieve all we need from the arguments of \m{Long}.
+
+
+
 
 \subsection{Well-founded induction}
 
