--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -784,7 +784,7 @@ Structural recursion is to be contrasted with \textit{general recursion}, found 
     Define a predicate that represents the shape of recursion in the algorithm and use it to implement a better template.
 \end{center}
 
-Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer is provided by the above technique which I will call the \textit{Inductive Domain Method}.\footnote{In the literature it is called the Bove-Capretta method but this name, derived from the surnames of its inventors, is neither descriptive nor very catchy, so I will avoid it. The method and related ideas were developed in a string of papers between 2001 and 2009: \cite{BCM1} \cite{BCM2} \cite{BCM3} \cite{BCM4} \cite{BCM5} \cite{BCM6} \cite{BCM7} \cite{BCM8} \cite{BCM9}.} It might look like a revelation at first, but in hindsight it couldn't have been more obvious. This technique basically tells us to represent general recursion on elements of some type by structural recursion on elements of a special type crafted precisely for this purpose. By doing that we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
+Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer is provided by the above technique which I will call the \textit{Inductive Domain Method}.\footnote{In the literature it is called the Bove-Capretta method but this name, derived from the surnames of its inventors, is neither descriptive nor very catchy, so I will avoid it. The method and related ideas were developed in a string of papers between 2001 and 2009: \cite{BCM1} \cite{BCM2} \cite{BCM3} \cite{BCM4} \cite{BCM5} \cite{BCM6} \cite{BCM7} \cite{BCM8} \cite{BCM9}.} It might look like a revelation at first, but in hindsight it couldn't have been more obvious. This technique basically tells us to represent general recursion on some type by structural recursion on a special type crafted precisely for this purpose. By doing that we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
 
 \inputminted
 [
@@ -795,14 +795,17 @@ Back to our (almost) initial question: we need to prove termination because only
 ]
 {Coq}{Snippets/Chapter2/ProvingTermination.v}
 
-The above listing shows how the Inductive Domain Method looks in practice. We define an inductive family of predicates \m{QSDom}, one for each parameter \m{A\ :\ QSArgs}. \m{QSDom A l} can be read aloud as ``\m{l} belongs to the domain of quicksort'' and an element of \m{QSDom A l} represents the complete call graph of our previous implementation of \m{qs} when applied to \m{l}.
+The above listing shows how the Inductive Domain Method looks in practice. We define \m{QSDom}, an inductive family of domain predicates,\footnote{\m{QSDom A} is in fact a type family, because its codomain is \m{Type}, but we'll ignore this little naming inconsistency. In a later section we will see a variant of the Inductive Domain Method where the domain predicate really is a predicate.} one for each parameter \m{A\ :\ QSArgs}. \m{QSDom A l} can be read aloud as ``\m{l} belongs to the domain of quicksort'' and an element of \m{QSDom A l} represents the complete call graph of our previous implementation of \m{qs} applied to \m{l}.
 
 There are two constructors. \m{Short} takes as argument a proof of \m{short l = None}, so it represents the case in which the list \m{l} is short. It can be read as ``if \m{l} is short, then it belongs to the domain of quicksort''. \m{Long} takes, as one of its arguments, a proof of \m{short l = Some (h, t)}, so it represents the recursive case in which \m{l} is not short. Its other arguments are proofs of \m{choosePivot h t = (pivot, rest)} and \m{partition pivot rest = (lt, eq, gt)}, which represent the calls to these functions that were present in our previous implementation of \m{qs}. Lastly, it takes as arguments the proofs that \m{lt} and \m{gt} belong to the domain. Therefore, the constructor \m{Long} can be read as ``\m{l} belongs to the domain if \m{lt} and \m{gt} belong to the domain'', where \m{lt} and \m{gt} are the results of \m{partition}ing \m{l} with the chosen \m{pivot}.
 
-Given such a domain predicate, the implementation of the new version of \m{qs} is trivial. Both \m{A} and \m{l} become implicit arguments and the new principal argument is \m{d : QSDom A l}. We match on \m{d} and in the first case we sort the list \m{l} ad hoc, whereas in the second case we recursively sort the elements lesser and greater than the pivot and put them together with the pivot and the elements equal to the pivot. Note that we don't have to call \m{choosePivot} or \m{partition} -- we can retrieve all we need from the arguments of \m{Long}.
+Given such a domain predicate, the implementation of \m{qs'} (a helper function that we will use to implement the new version of \m{qs}) is trivial. Both \m{A} and \m{l} become implicit arguments and the new principal argument is \m{d\ :\ QSDom A l}. We pattern match on \m{d} and in the first case we sort the list \m{l} ad hoc, whereas in the second case we recursively sort the elements lesser and greater than the pivot and put them together with the pivot and the elements equal to the pivot in the middle. Note that we don't have to call \m{choosePivot} or \m{partition} -- we can retrieve everything we need from the arguments of \m{Long}. To obtain the desired quicksort implementation, we will have to prove that all lists satisfy the domain predicate, which we will do in the next subsection.
 
+Having seen an example use of the method, let's restate it in more abstract terms: the idea is to implement a general recursive function of type \m{A -> B} as a function of type \m{forall a\ :\ A, D a -> B}, where \m{D\ :\ A -> Type} is the domain predicate whose elements represent the call graph of the principal argument, i.e. the tree of all the recursive calls that have to be performed in order to compute the result.
 
+The Inductive Domain Method can be used not only to implement general recursive functions, but also to represent partial recursive functions. If a partial recursive function terminates for some input, we can construct the corresponding call graph and use it to run the function's representation. Of course in general we won't be able to prove that a partial recursive function terminates for all inputs, so we won't be able to recover the desired partial function of type \m{A -> B} from its representation of type \m{forall a\ :\ A, D a -> B}.
 
+We have seen only the basic version of the Inductive Domain Method. The technique can be accomodated to fit mutual recursion (i.e. two or more general recursive functions that call each other), nested recursion (i.e. a situation where the argument of a recursive call is the result of another recursive call, like in the famous McCarthy f91 function \cite{McCarthy}.) and possibly even higher-order recursion (i.e. a situation where recursive calls may be partially applied). See the string of papers cited before for details.
 
 \subsection{Well-founded induction}
 
@@ -1093,7 +1096,7 @@ Mention thesis' repository: \url{wkolowski.github.io/RandomCoqCode/Thesis/}
     \url{https://dl.acm.org/doi/10.5555/774194.774197}
 
 \bibitem{BCM2}
-    Ana Bove and Venanzio Capretta,
+    Ana Bove and Venanzio Capretta, \\
     \textit{Nested General Recursion and Partiality in Type Theory},
     2001, \\
     \url{https://www.researchgate.net/publication/285777618_Nested_General_Recursion_and_Partiality_in_Type_Theory}
@@ -1111,25 +1114,25 @@ Mention thesis' repository: \url{wkolowski.github.io/RandomCoqCode/Thesis/}
     \url{https://link.springer.com/chapter/10.1007/3-540-39185-1_3}
 
 \bibitem{BCM5}
-    Ana Bove and Venanzio Capretta,
+    Ana Bove and Venanzio Capretta, \\
     \textit{Modelling general recursion in type theory},
     2004, \\
     \url{http://www.cs.nott.ac.uk/~pszvc/publications/General_Recursion_MSCS_2005.pdf}
 
 \bibitem{BCM6}
-    Ana Bove and Venanzio Capretta,
+    Ana Bove and Venanzio Capretta, \\
     \textit{Recursive Functions with Higher Order Domains},
     2005, \\
     \url{http://www.cs.ru.nl/~venanzio/publications/Higher_Domains_TLCA2005.pdf}
 
 \bibitem{BCM7}
-    Ana Bove and Venanzio Capretta,
+    Ana Bove and Venanzio Capretta, \\
     \textit{Computation by Prophecy},
     2007, \\
     \url{https://www.researchgate.net/publication/220727479_Computation_by_Prophecy}
 
 \bibitem{BCM8}
-    Ana Bove and Venanzio Capretta,
+    Ana Bove and Venanzio Capretta, \\
     \textit{A Type of Partial Recursive Functions},
     2008, \\
     \url{https://www.researchgate.net/publication/221302295_A_Type_of_Partial_Recursive_Functions}
