--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -784,7 +784,7 @@ Structural recursion is to be contrasted with \textit{general recursion}, found 
     Define a predicate that represents the shape of recursion in the algorithm and use it to implement a better template.
 \end{center}
 
-Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer is provided by the above technique which I will call the \textit{Inductive Domain Method}.\footnote{In the literature it is called the Bove-Capretta method but this name, derived from the surnames of its inventors, is neither descriptive nor very catchy, so I will avoid it. The method and related ideas were developed in a string of papers between 2001 and 2009: \cite{BCM1} \cite{BCM2} \cite{BCM3} \cite{BCM4} \cite{BCM5} \cite{BCM6} \cite{BCM7} \cite{BCM8} \cite{BCM9}.} It might look like a revelation at first, but in hindsight it couldn't have been more obvious. This technique basically tells us to represent general recursion on some type by structural recursion on a special type crafted precisely for this purpose. By doing that we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
+Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer is provided by the above technique which I will call the \textit{inductive domain method}. It might look like a revelation at first, but in hindsight it couldn't have been more obvious. This technique basically tells us to represent general recursion on some type by structural recursion on a special type crafted precisely for this purpose. By doing that we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
 
 \inputminted
 [
@@ -795,7 +795,7 @@ Back to our (almost) initial question: we need to prove termination because only
 ]
 {Coq}{Snippets/Chapter2/ProvingTermination.v}
 
-The above listing shows how the Inductive Domain Method looks in practice. We define \m{QSDom}, an inductive family of domain predicates,\footnote{\m{QSDom A} is in fact a type family, because its codomain is \m{Type}, but we'll ignore this little naming inconsistency. In a later section we will see a variant of the Inductive Domain Method where the domain predicate really is a predicate.} one for each parameter \m{A\ :\ QSArgs}. \m{QSDom A l} can be read aloud as ``\m{l} belongs to the domain of quicksort'' and an element of \m{QSDom A l} represents the complete call graph of our previous implementation of \m{qs} applied to \m{l}.
+The above listing shows how the inductive domain method looks in practice. We define \m{QSDom}, an inductive family of domain predicates,\footnote{\m{QSDom A} is in fact a type family, because its codomain is \m{Type}, but we'll ignore this little naming inconsistency. In a later section we will see a variant of the inductive domain method where the domain predicate really is a predicate.} one for each parameter \m{A\ :\ QSArgs}. \m{QSDom A l} can be read aloud as ``\m{l} belongs to the domain of quicksort'' and an element of \m{QSDom A l} represents the complete call graph of our previous implementation of \m{qs} applied to \m{l}.
 
 There are two constructors. \m{Short} takes as argument a proof of \m{short l = None}, so it represents the case in which the list \m{l} is short. It can be read as ``if \m{l} is short, then it belongs to the domain of quicksort''. \m{Long} takes, as one of its arguments, a proof of \m{short l = Some (h, t)}, so it represents the recursive case in which \m{l} is not short. Its other arguments are proofs of \m{choosePivot h t = (pivot, rest)} and \m{partition pivot rest = (lt, eq, gt)}, which represent the calls to these functions that were present in our previous implementation of \m{qs}. Lastly, it takes as arguments the proofs that \m{lt} and \m{gt} belong to the domain. Therefore, the constructor \m{Long} can be read as ``\m{l} belongs to the domain if \m{lt} and \m{gt} belong to the domain'', where \m{lt} and \m{gt} are the results of \m{partition}ing \m{l} with the chosen \m{pivot}.
 
@@ -803,13 +803,17 @@ Given such a domain predicate, the implementation of \m{qs'} (a helper function 
 
 Having seen an example use of the method, let's restate it in more abstract terms: the idea is to implement a general recursive function of type \m{A -> B} as a function of type \m{forall a\ :\ A, D a -> B}, where \m{D\ :\ A -> Type} is the domain predicate whose elements represent the call graph of the principal argument, i.e. the tree of all the recursive calls that have to be performed in order to compute the result.
 
-The Inductive Domain Method can be used not only to implement general recursive functions, but also to represent partial recursive functions. If a partial recursive function terminates for some input, we can construct the corresponding call graph and use it to run the function's representation. Of course in general we won't be able to prove that a partial recursive function terminates for all inputs, so we won't be able to recover the desired partial function of type \m{A -> B} from its representation of type \m{forall a\ :\ A, D a -> B}.
+In the literature, the inductive domain method is better known as the ``Bove-Capretta method'', but this name, derived from the surnames of its inventors, is neither descriptive nor very catchy, so we avoid it. The method and related ideas were first developed in a string of papers between 2001 and 2009 \cite{BCM1} \cite{BCM2} \cite{BCM3} \cite{BCM4} \cite{BCM5} \cite{BCM6} \cite{BCM7} \cite{BCM8} \cite{BCM9} in a form that more closely resembles what we will see in section \ref{lessrelevant}.
 
-We have seen only the basic version of the Inductive Domain Method. The technique can be accomodated to fit mutual recursion (i.e. two or more general recursive functions that call each other), nested recursion (i.e. a situation where the argument of a recursive call is the result of another recursive call, like in the famous McCarthy f91 function \cite{McCarthy}.) and possibly even higher-order recursion (i.e. a situation where recursive calls may be partially applied). See the string of papers cited before for details.
+We have seen only the basic version of the inductive domain method because quicksort's recursion scheme is rather basic. The method is pretty malleable and can be accomodated to fit mutual recursion (i.e. two or more general recursive functions that call each other; see \cite{BCM3}), nested recursion (i.e. a situation where the result of a recursive call is the argument of another recursive call, like in the famous McCarthy f91 function \cite{f91}; see \cite{BCM2}) and possibly even higher-order recursion (i.e. a situation where recursive calls may be partially applied; see \cite{BCM6}).
+
+The inductive domain method can be used not only to implement general recursive functions, but also to represent partial recursive functions \cite{BCM8}. If a partial recursive function terminates for some input, we can construct the corresponding call graph and use it to run the function's representation. Of course in general we won't be able to prove that a partial recursive function terminates for all inputs, so we won't be able to recover the desired partial function of type \m{A -> B} from its representation of type \m{forall a\ :\ A, D a -> B}.\footnote{The inductive domain method, as a means of representing partial recursive functions, has some problems, for example with composition. See \cite{Knapp} for the most recent take on partial recursive functions and computability in (homotopy) type theory.}
 
 \subsection{Well-founded induction}
 
-\subsection{A less relevant variant of the inductive domain method}
+Having gotten a new quicksort template, we can now proceed to prove termination by well-founded induction.
+
+\subsection{A less relevant variant of the inductive domain method} \label{lessrelevant}
 
 Bove-Capretta using sort Prop.
 
@@ -1143,7 +1147,18 @@ Mention thesis' repository: \url{wkolowski.github.io/RandomCoqCode/Thesis/}
     2009, \\
     \url{https://core.ac.uk/download/pdf/82578788.pdf}
 
+\bibitem{f91}
+    Donald Knuth,
+    \textit{Textbook Examples of Recursion},
+    1991, \\
+    \url{https://arxiv.org/pdf/cs/9301113.pdf}
 
+\bibitem{Knapp}
+    Cory Knapp,
+    \textit{Partial Functions and Recursion in Univalent Type
+    Theory},
+    2018, \\
+    \url{https://etheses.bham.ac.uk//id/eprint/8448/4/Knapp18PhD.pdf}
 \end{thebibliography}
 
 \end{document}
