Some coding in preparation for section 2.4. Code listings inserted into the text.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -864,7 +864,7 @@ Bove-Capretta using sort Prop.
     frame=lines,
     bgcolor=CoqIDE,
     firstline=131,
-    lastline=148
+    lastline=149
 ]
 {Coq}{Snippets/Chapter2/ProveTermination.v}
 
@@ -877,6 +877,30 @@ Coq's \m{Function} command.
 \subsection{One induction to rule them all -- functional induction}
 
 Mention functional induction here and how to derive it.
+
+\inputminted
+[
+    frame=lines,
+    bgcolor=CoqIDE,
+    firstline=115,
+    lastline=206
+]
+{Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
+
+\inputminted
+[
+    frame=lines,
+    bgcolor=CoqIDE,
+    firstline=208,
+    lastline=284
+]
+{Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
+
+\subsection{Out of nothing}
+
+The verification goes here.
+
+\subsection{Foreseeing user experience 3 -- avoiding bloatware}
 
 \subsection{Get your hands dirty -- concrete proofs}
 
