Some code on actually proving the algorithm correct. Moved code on Prop-based Bove-Capretta method to a separate file.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -896,7 +896,7 @@ Mention functional induction here and how to derive it.
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
 
-\subsection{Out of nothing}
+\subsection{E pluribus unum}
 
 The verification goes here.
 
