Got Bove-Capretta method with Prop codomain under control thanks to some dependent pattern matching ninja shenanigans. Refactored code so that TerminatingQSArgs now has (the ordinary) QSArgs as a field.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -795,13 +795,14 @@ Back to our (almost) initial question: we need to prove termination because only
 ]
 {Coq}{Snippets/Chapter2/ProveTermination.v}
 
+% TODO: check if the mentioned variant of inductive domain predicate was really described later
 The above listing shows how the inductive domain method looks in practice. We define \m{QSDom}, an inductive family of domain predicates,\footnote{\m{QSDom A} is in fact a type family, because its codomain is \m{Type}, but we'll ignore this little naming inconsistency. In a later section we will see a variant of the inductive domain method where the domain predicate really is a predicate.} one for each parameter \m{A\ :\ QSArgs}. \m{QSDom A l} can be read aloud as ``\m{l} belongs to the domain of quicksort'' and an element of \m{QSDom A l} represents the complete call graph of our previous implementation of \m{qs} applied to \m{l}.
 
-There are two constructors. \m{Short} takes as argument a proof of \m{short l = None}, so it represents the case in which the list \m{l} is short. It can be read as ``if \m{l} is short, then it belongs to the domain of quicksort''. \m{Long} takes, as one of its arguments, a proof of \m{short l = Some (h, t)}, so it represents the recursive case in which \m{l} is not short. Its other arguments are proofs of \m{choosePivot h t = (pivot, rest)} and \m{partition pivot rest = (lt, eq, gt)}, which represent the calls to these functions that were present in our previous implementation of \m{qs}. Lastly, it takes as arguments the proofs that \m{lt} and \m{gt} belong to the domain. Therefore, the constructor \m{Long} can be read as ``\m{l} belongs to the domain if \m{lt} and \m{gt} belong to the domain'', where \m{lt} and \m{gt} are the results of \m{partition}ing \m{l} with the chosen \m{pivot}.
+There are two constructors. \m{Short} takes as argument a proof of \m{short l = None}, so it represents the case in which the list \m{l} is short. It can be read as ``if \m{l} is short, then it belongs to the domain of quicksort''. \m{Long} takes, as one of its arguments, a proof of \m{short l = Some (h, t)}, so it represents the recursive case in which \m{l} is not short. Its other arguments are proofs of \m{choosePivot h t = (pivot, rest)} and \m{partition pivot rest = (lt, eq, gt)}, which represent the calls to these functions that were present in our previous implementation of \m{qs}. Lastly, it takes as arguments the proofs that \m{lt} and \m{gt} belong to the domain, which represent the recursive calls. Therefore, the constructor \m{Long} can be read as ``\m{l} belongs to the domain if \m{lt} and \m{gt} belong to the domain''.
 
-Given such a domain predicate, the implementation of \m{qs'} (a helper function that we will use to implement the new version of \m{qs}) is trivial. Both \m{A} and \m{l} become implicit arguments and the new principal argument is \m{d\ :\ QSDom A l}. We pattern match on \m{d} and in the first case we sort the list \m{l} ad hoc, whereas in the second case we recursively sort the elements lesser and greater than the pivot and put them together with the pivot and the elements equal to the pivot in the middle. Note that we don't have to call \m{choosePivot} or \m{partition} -- we can retrieve everything we need from the arguments of \m{Long}. To obtain the desired quicksort implementation, we will have to prove that all lists satisfy the domain predicate, which we will do in the next subsection.
+Given such a domain predicate, the implementation of \m{qs'} (a helper function that we will use to implement the new version of \m{qs}) is trivial. Both \m{A} and \m{l} become implicit arguments and the new principal argument is \m{d\ :\ QSDom A l}. We pattern match on \m{d} and in the first case we sort the list \m{l} ad hoc, whereas in the second case we recursively sort the elements lesser and greater than the pivot and put them together with the pivot and the elements equal to the pivot in the middle. Note that we don't have to call \m{choosePivot} or \m{partition} -- we can retrieve everything we need from the arguments of \m{Long}.
 
-Having seen an example use of the method, let's restate it in more abstract terms: the idea is to implement a general recursive function of type \m{A -> B} as a function of type \m{forall a\ :\ A, D a -> B}, where \m{D\ :\ A -> Type} is the domain predicate whose elements represent the call graph of the principal argument, i.e. the tree of all the recursive calls that have to be performed in order to compute the result.
+Having seen an example use of the method, let's restate it in more abstract terms: the idea is to represent a general recursive function of type \m{A -> B} as a function of type \m{forall a\ :\ A, D a -> B}, where \m{D\ :\ A -> Type} is the domain predicate whose elements represent the call graph of the principal argument, i.e. the tree of all the recursive calls that have to be performed in order to compute the result. To obtain the original function of type \m{A -> B} it suffices to prove that all \m{a\ :\ A} satisfy the domain predicate.
 
 In the literature, the inductive domain method is better known as the ``Bove-Capretta method'', but this name, derived from the surnames of its inventors, is neither very descriptive nor catchy, so we avoid it. The method and related ideas were first developed in a string of papers between 2001 and 2009 \cite{BCM1} \cite{BCM2} \cite{BCM3} \cite{BCM4} \cite{BCM5} \cite{BCM6} \cite{BCM7} \cite{BCM8} \cite{BCM9} in a form that more closely resembles what we will see in section \ref{lessrelevant}.
 
